force-app/main/default/objects/HR_DocGen_Schema__mdt/HR_DocGen_Schema__mdt.object-meta.xml
<CustomObject>
    <description>Versioned, non-sensitive contract that tells the transient Doc Gen submission Apex which schema/version is active and which Box template it targets. Contains no request field values.</description>
    <label>HR Doc Gen Schema</label>
    <pluralLabel>HR Doc Gen Schemas</pluralLabel>
</CustomObject>