force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Box_DocGen_Template_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_DocGen_Template_File_Id__c</fullName>
    <label>Box DocGen Template File Id</label>
    <description>Opaque Box file ID selecting the Box Doc Gen template for this schema version.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>