force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Box_DocGen_Template_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_DocGen_Template_Version_Id__c</fullName>
    <label>Box DocGen Template Version Id</label>
    <description>Opaque Box file-version ID pinning generation and tag validation to the approved template version.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>