force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Box_Folder_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_Template_Id__c</fullName>
    <label>Box Folder Template Id</label>
    <description>Opaque Box folder-template ID used by the intake Flow to provision the Case folder.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>