force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Status__c</fullName>
    <label>Lifecycle Status</label>
    <description>One of Draft, Active, or Retired. Only Active accepts new submissions.</description>
    <length>20</length>
    <type>Text</type>
</CustomField>