force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Max_Payload_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Max_Payload_Bytes__c</fullName>
    <label>Max Payload Bytes</label>
    <description>Approved limit on the serialized user_input payload size; submissions exceeding this are rejected before the callout.</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>