force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Output_File_Name_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Output_File_Name_Pattern__c</fullName>
    <label>Output File Name Pattern</label>
    <description>Generic filename pattern allowing only non-sensitive tokens, for example HR Request - {caseNumber}.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>