force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Output_Type__c.field-meta.xml
<CustomField>
    <fullName>Output_Type__c</fullName>
    <label>Output Type</label>
    <description>Restricts the Doc Gen output format, for example pdf.</description>
    <length>20</length>
    <type>Text</type>
</CustomField>