force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <description>Non-sensitive administrative label, for example New Hire/Rehire.</description>
    <length>80</length>
    <type>Text</type>
</CustomField>