force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Schema_Key__c.field-meta.xml
<CustomField>
    <fullName>Schema_Key__c</fullName>
    <label>Schema Key</label>
    <description>Stable logical schema name, for example newHire. Never contains submitted request data.</description>
    <length>40</length>
    <type>Text</type>
</CustomField>