force-app/main/default/objects/HR_DocGen_Schema__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <description>Exact contract version selected by the Flow, for example 1.0.</description>
    <length>10</length>
    <type>Text</type>
</CustomField>